# uwutcg-bot

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pricing.yaml  prompt-bot-discord-tracking.md  pyproject.toml  requirements.txt
.firecrawl/: sfd-347-p2.json  sfd-348.json  unl-347-p2.json  unl-347.json  unl-348.json
bot/: __init__.py  config.py  main.py
bot/cogs/: __init__.py  arbitrage.py  calc.py  cards.py  config.py  daily.py  grading.py  info.py  knowledge.py  monitor.py  notify.py  sealed.py  signals.py  sold.py  tracking.py
bot/db/: __init__.py  database.py  schema.py
bot/scrapers/: __init__.py  base.py  cardmarket.py  ebay.py  japan.py  riftcodex.py  vinted.py
bot/services/: __init__.py  arbitrage.py  fx_wise.py  grading_roi.py  knowledge.py  price_monitor.py  pricing.py  signals.py  undervalue.py
bot/ui/: __init__.py  alerts.py  embeds.py
docs/: monitor-overnumbered-riftbound.md
docs/superpowers/specs/: 2026-06-09-bot-discord-tracking-design.md
knowledge/: card_conditions.md  grading.md  pokemon.md  riftbound.md
scripts/: smoke_scrapers.py
tests/: conftest.py  test_arbitrage.py  test_grading_roi.py  test_misc.py  test_pricing.py  test_riftcodex.py  test_signals.py  test_tracking_mercari.py  test_undervalue.py
