[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uwutcg-tracking-bot"
version = "0.1.0"
description = "Bot Discord de veille marché UwUTCG (Pokémon / Riftbound / figurines)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
